--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
 
 
   </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LJ2GF0Q8LW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LJ2GF0Q8LW');
+  </script>
     
   </body>
 </html>
